--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,11 @@
+body {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
 .row.match-my-cols{
   display: flex;
   flex-wrap: wrap;
-}
-
-.header.row.match-my-cols{
-  align-items: center;
 }
 
 .row.match-my-cols > [class*='col-']{
@@ -12,9 +13,19 @@
   flex-direction: column;
 }
 
+.repolink {
+  text-align: right;
+}
+
 .footer {
   text-align: center;
   font-size: x-small;
+}
+
+.social {
+  font-size: 6rem;
+  text-align: center;
+  margin-top: 4rem;
 }
 
 .header {
