--- a/css/styles.css
+++ b/css/styles.css
@@ -20,8 +20,6 @@ h2 {
   margin-top: 10px;
 }
 
-
-
 .navbar-brand {
   font-size: 1em;
 }
@@ -85,6 +83,8 @@ a:hover, a:active {
   width: 100%;
 }
 
+/*** colors/other utility css ***/
+
 .glow {
   text-shadow: white 0 0 10px;
 }
@@ -117,6 +117,14 @@ a:hover, a:active {
   background-image: url(../img/pool-sm.png);
   background-repeat: repeat;
   color: white;
+}
+
+.cat-back {
+  background-color: #e6e6e6;
+}
+
+.quote-back {
+  background-color: #51b46d;
 }
 
 .gradient {
@@ -158,11 +166,6 @@ a:hover, a:active {
 
   .header h1{
     margin-top: 150px;
-  }
-
-  .container-fluid:not(#navcontainer){
-    padding-top: 60px;
-    padding-bottom: 60px;
   }
 
   #portfolio h3 {
