--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,15 @@
 body {
   max-width: 1080px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-h1 {
-  font-size: 400%;
-  color: #3F5C56;
-  font-weight: bold;
+.jumbotron h1 {
+  color: #3A727F;
 }
 
 h2 {
-  color: #253C37;
+  color: #3A727F;
   font-weight: bold;
 }
 
@@ -49,7 +48,7 @@ a:hover, a:active {
   max-width: 250px;
   display: block;
   margin: 0 auto;
-  border: solid 4px #3F5C56;
+  border: solid 4px #3A727F;
 }
 
 .row {
@@ -90,15 +89,15 @@ a:hover, a:active {
 }
 
 .light-back {
-  background-color: #96DFCF;
+  background-color: #EDEFF7;
 }
 
 .med-back {
-  background-color: #62C4AE;
+  background-color: #C9CFE4;
 }
 
 .dark-back {
-  background-color: #3DA890;
+  background-color: #9CA6C9;
 }
 
 .ooze-back {
@@ -129,10 +128,10 @@ a:hover, a:active {
 
 .gradient {
   background: #62C4AE;
-  background: -webkit-linear-gradient(white, #0D7F66);
-  background: -o-linear-gradient(white, #0D7F66);
-  background: -moz-linear-gradient(white, #0D7F66);
-  background: linear-gradient(white, #3DA890);
+  background: -webkit-linear-gradient(white, #6E7BA9);
+  background: -o-linear-gradient(white, #6E7BA9);
+  background: -moz-linear-gradient(white, #6E7BA9);
+  background: linear-gradient(white, #6E7BA9);
 }
 
 
@@ -152,7 +151,7 @@ a:hover, a:active {
 
 @media screen and (min-width: 992px) {
   body {
-    box-shadow: 0px 0px 12px 2px rgba(0, 0, 0, 0.75);
+    margin-top: 100px;
   }
 
   .header img{
@@ -166,6 +165,10 @@ a:hover, a:active {
 
   .header h1{
     margin-top: 150px;
+  }
+
+  .container-fluid:not(#navcontainer){
+    margin-bottom: 3rem;
   }
 
   #portfolio h3 {
