--- a/css/styles.css
+++ b/css/styles.css
@@ -8,15 +8,15 @@ body {
   color: #3A727F;
 }
 
+.jumbotron h2 {
+  font-size: 2rem;
+  margin-top: 30px;
+  margin-bottom: -80px;
+}
+
 h2 {
   color: #3A727F;
   font-weight: bold;
-}
-
-#about span {
-  font-size: .9em;
-  float: right;
-  margin-top: 10px;
 }
 
 .navbar-brand {
@@ -77,10 +77,20 @@ a:hover, a:active {
 }
 
 #about .social {
-  font-size: 6rem;
   text-align: center;
-  margin-top: 4rem;
-  width: 100%;
+  margin-top: 2rem;
+  font-size: 2rem;
+}
+
+#about .fa {
+  font-size: 5rem;
+  margin-top: 10px
+}
+
+#about span {
+  font-size: .9em;
+  float: right;
+  margin: 10px 0;
 }
 
 /*** colors/other utility css ***/
@@ -91,6 +101,10 @@ a:hover, a:active {
 
 .light-back {
   background-color: #EDEFF7;
+}
+
+.light-text {
+  color: #EDEFF7;
 }
 
 .med-back {
@@ -151,6 +165,17 @@ a:hover, a:active {
   .repolink {
     margin-top: auto;
   }
+
+  #about .social {
+    margin-top: 3rem;
+    font-size: 3rem;
+  }
+
+  #about .fa {
+    font-size: 6rem;
+    padding: 0 10px;
+    margin-top: 20px;
+  }
 }
 
 
@@ -170,6 +195,13 @@ a:hover, a:active {
 
   .header h1{
     margin-top: 150px;
+  }
+
+  .jumbotron h2 {
+    font-size: 3rem;
+    margin-top: 80px;
+    margin-bottom: -80px;
+    color: none;
   }
 
   .container-fluid .jumbotron {
