--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ h1 {
   font-weight: bold;
   margin-top: 0px;
   margin-bottom: 2rem;
-  font-family: serif;
+  font-family: 'Playfair Display', serif;
 }
 
 .navbar-brand {
@@ -190,14 +190,6 @@ a:hover, a:active {
 @media screen and (min-width: 992px) {
   body {
     margin-top: 80px;
-  }
-
-  .header {
-    padding-top: 20px;
-  }
-
-  .header h1{
-    margin-top: 150px;
   }
 
   .container-fluid:not(#navcontainer){
